# FlexPushdownDB

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  requirements.txt  run.py  setup.py
ATTIC/normal-ssb/: CMakeLists.txt
FlexPushdownDB/normal-plan/: CMakeLists.txt
cpp/: CMakeLists.txt
fpdb-aws/: CMakeLists.txt  README.md
fpdb-aws/src/: AWSClient.cpp  AWSConfig.cpp  AirMettleClientAuthHandler.cpp  ProfileAWSCredentialsProviderChain.cpp  S3Util.cpp
fpdb-cache/: CMakeLists.txt  README.md
fpdb-cache/src/: Globals.cpp  SegmentCache.cpp  SegmentData.cpp  SegmentKey.cpp  SegmentMetadata.cpp  SegmentRange.cpp  Util.cpp
fpdb-cache/test/: CacheTest.cpp  Globals.h
fpdb-caf/: CMakeLists.txt  README.md
fpdb-caf/src/: CAFUtil.cpp
fpdb-calcite/cpp/: CMakeLists.txt
fpdb-catalogue/: CMakeLists.txt  README.md
fpdb-catalogue/src/: Catalogue.cpp  CatalogueEntry.cpp  Partition.cpp  Table.cpp
fpdb-executor/: CMakeLists.txt  README.md
fpdb-executor/bench/: BloomFilterBenchmark.cpp  Globals.h  GroupBenchmark.cpp  HashJoinBenchmark.cpp  MainBenchmark.cpp  ShuffleBenchmark.cpp
fpdb-executor/executable/: HashPartitionerMain.cpp
fpdb-executor/src/: CollAdaptPushdownMetricsExecution.cpp  Execution.cpp  Executor.cpp  FPDBStoreExecution.cpp  Globals.cpp
fpdb-expression/: CMakeLists.txt  README.md
fpdb-expression-gandiva/: CMakeLists.txt  README.md
fpdb-expression-gandiva/src/: Add.cpp  And.cpp  BinaryExpression.cpp  Canonicalizer.cpp  Cast.cpp  Column.cpp  DateAdd.cpp  DateExtract.cpp  DateIntervalType.cpp  Divide.cpp  EqualTo.cpp  Expression.cpp  Filter.cpp  Globals.cpp  GreaterThan.cpp  GreaterThanOrEqualTo.cpp  If.cpp  In.cpp  IsNull.cpp  LessThan.cpp  LessThanOrEqualTo.cpp  Like.cpp  Multiply.cpp  Not.cpp  NotEqualTo.cpp  NumericLiteral.cpp  Or.cpp  Projector.cpp  StringLiteral.cpp  Substr.cpp  Subtract.cpp  Util.cpp
fpdb-expression-gandiva/test/: BinaryExpressionTest.cpp  CastTest.cpp  Globals.h  MultiplyTest.cpp  TestUtil.h  ThreadTest.cpp
fpdb-expression/src/: Expression.cpp  Filter.cpp  Projector.cpp
fpdb-main/: CMakeLists.txt  README.md
fpdb-main/bench/: BitmapPushdownBench.cpp  BytesReadBench.cpp  PredTransBench.cpp  SSBDistFPDBStoreBench.cpp  TPCHBench.cpp  TPCHDistBench.cpp  TPCHDistFPDBStoreBench.cpp  TPCHFPDBStoreDiffNodeBench.cpp
fpdb-main/src/: Client.cpp  ClientMain.cpp  ExecConfig.cpp  Server.cpp  ServerMain.cpp
fpdb-main/test/: BitmapPushdownTest.cpp  CachingOnlyTest.cpp  HybridTest.cpp  PredTransTest.cpp  SSBFPDBStoreSameNodeTest.cpp  SSBTest.cpp  TPCHDistTest.cpp  TPCHFPDBStoreSameNodeTest.cpp  TPCHTest.cpp
fpdb-main/test-base/: AdaptPushdownTestUtil.cpp  AdaptPushdownTestUtil.h  BitmapPushdownTestUtil.cpp  BitmapPushdownTestUtil.h  Globals.h  MainTest.cpp  PredTransTestUtil.cpp  PredTransTestUtil.h  TestUtil.cpp  TestUtil.h
fpdb-plan/: CMakeLists.txt  README.md
fpdb-plan/src/: Mode.cpp  Util.cpp
fpdb-store-client/: CMakeLists.txt  README.md
fpdb-store-client/src/: FPDBStoreClientConfig.cpp  Module.cpp
fpdb-store-client/test/: Global.cpp  Global.hpp  Main.cpp
fpdb-store-server/: .gitignore  CMakeLists.txt  README.md
fpdb-store-server/executable/: Global.hpp  Main.cpp
fpdb-store-server/proto/: FileService.proto
fpdb-store-server/src/: FPDBStoreServerConfig.cpp  Module.cpp  Server.cpp  ServerConfig.cpp  SignalHandler.cpp
fpdb-store-server/test/: DistributedTest.cpp  FileServiceTest.cpp  FlightBasicTest.cpp  FlightSelectTest.cpp  Global.cpp  Global.hpp  Main.cpp
fpdb-tuple/: CMakeLists.txt  README.md
fpdb-tuple/bench/: ArrayAppenderBench.cpp  Globals.h
fpdb-tuple/executable/: ConverterMain.cpp
fpdb-tuple/src/: ArrayAppenderWrapper.cpp  ArrayHasher.cpp  Column.cpp  ColumnBuilder.cpp  ColumnIndex.cpp  ColumnIterator.cpp  ColumnName.cpp  Converter.cpp  FileFormat.cpp  FileReader.cpp  LocalFileReader.cpp  LocalFileReaderBuilder.cpp  RecordBatchHasher.cpp  Scalar.cpp  Schema.cpp  TupleSet.cpp  TupleSetIndex.cpp  TupleSetIndexFinder.cpp  TupleSetShowOptions.cpp
fpdb-tuple/test/: ArrayAppenderTest.cpp  CSVTest.cpp  Globals.h  MainTest.cpp  ParquetTest.cpp  TupleSetIndexTest.cpp  TupleTest.cpp
fpdb-util/: CMakeLists.txt  README.md
fpdb-util/src/: CPUMonitor.cpp  Util.cpp
fpdb-util/test/: Globals.h  MainTest.cpp  TraitsTest.cpp  UtilTest.cpp
normal/: .gitignore  CMakeLists.txt  README.md  README.rst  setup.sh
normal-avro/: CMakeLists.txt  generate_avro_type.sh
normal-avro-tuple/: CMakeLists.txt
normal-avro-tuple/src/: makeTuple.cpp
normal-avro-tuple/test/: makeTupleTest.cpp
normal-avro/include/: avroTuple.h  customer_d.hh  date.hh  lineorder.hh  part.hh  supplier_d.hh
normal-avro/src/: AvroTuple.cpp  avroTuple.cpp
normal-core/: CMakeLists.txt
normal-core/src/: OperatorConnection.cpp  OperatorDirectory.cpp
normal-frontend/: CMakeLists.txt
normal-frontend/src/: Client.cpp  Config.cpp  Main.cpp
normal-htap/: CMakeLists.txt
normal-htap/test/: S3AvroTest.cpp  deltapumpTest.cpp
normal-pushdown/: CMakeLists.txt
normal-pushdown/bench/: Globals.h  ParquetBenchmark.cpp
normal-pushdown/src/: AWSClient.cpp  Util.cpp
normal-pushdown/test/: AggregateTest.cpp  ConnectionTest.cpp  FileScanTest.cpp  FilterTest.cpp  Globals.h  GroupTest.cpp  JoinTest.cpp  S3SelectScanTest.cpp  SortTest.cpp
normal-tuple/: CMakeLists.txt
normal-tuple/bench/: ArrayAppenderBench.cpp
normal-tuple/src/: ArrayAppenderWrapper.cpp  Column.cpp  ColumnIndex.cpp  ColumnName.cpp  Converter.cpp  FileType.cpp  TupleSetIndexFinder.cpp  TupleSetShowOptions.cpp
normal-tuple/test/: CSVTest.cpp  TupleSetIndexTest.cpp
normal-util/: CMakeLists.txt
normal-util/src/: Globals.cpp  Util.cpp
normal/ATTIC/: External_iwyu.cmake  FindLLVM.cmake  MainTest.cpp
normal/cmake/: CAF.cmake  CMakeUtils.cmake  Configure_LLVM.cmake  Dependency_SQLite3.cmake  External_ANTLR.cmake  External_AWSCPPSDK.cmake  External_Backward.cmake  External_CallableTraits.cmake  External_SQLite3.cmake  External_arrow.cmake  External_boost.cmake  External_caf.cmake  External_doctest.cmake  External_expected.cmake  External_fmt.cmake  FindANTLR.cmake  (+16 more)
(+2795 files in other folders)
